<resources>
    <string name="app_name">MoviePop</string>
    <string name="action_share">Share</string>

    <string name="title">Title</string>
    <string name="date">Release Date: </string>
    <string name="rating">Rating: </string>
    <string name="synopsis">Synopsis: </string>
    <string name="review">Reviews</string>
    <string name="no_reviews">No Reviews Available</string>

    <string name="add_to_favorites">Add to Favorites</string>
</resources>
